Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89184

Unicode key mappings are not working in all Qt based applications

XMLWordPrintable

    • Linux/X11
    • 51e940260af183228798c7741646ac88252e1f3b (qt/qtbase/6.0) e688b99995b8c624dbcea296c99fb89262d29e15 (qt/qtbase/dev) a4a0adbc1f4544b771aba5e8a493b4c9bce09db9 (qt/tqtc-qtbase/tqtc/lts-5.15)

      Problem

      In linux emojis can be mapped to keyboard keys, for fast emoji typing, like

      xmodmap -e "keycode 49 = U1F44D U1F64F"

      https://github.com/Parveshdhull/emoji-keyboard

      But for some reason nothing is happening in text box when key is pressed, while it works everywhere.

      Other Testing

      I also tried keymapping using autokey. it doesn't have any issue with simple text, but emoji is creating problem.
      https://github.com/autokey/autokey

      autokey has many ways of automatic pasting. All failed in text boxed, except shift+insert.

      I don't know what text box is doing but after that autokey also freezes.

      Tested Applications

      https://github.com/telegramdesktop/tdesktop

      https://www.archlinux.org/packages/community/x86_64/maui-nota/

      Bug Reported

      https://github.com/telegramdesktop/tdesktop/issues/9860

        For Gerrit Dashboard: QTBUG-89184
        # Subject Branch Project Status CR V

            liaqi Liang Qi
            parvesh.dhull Parvesh Monu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes