QInputControl: accept surrogate category character

See also https://unicodebook.readthedocs.io/unicode_encodings.html#utf-16-surrogate-pairs .

Fixes: QTBUG-89184
Change-Id: I04eff7f42f0030346603a7b31e4ac854a477030c
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit e688b99995b8c624dbcea296c99fb89262d29e15)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>