src/gui/text/qinputcontrol.cpp
@@ -79,6 +79,9 @@ bool QInputControl::isAcceptableInput(const QKeyEvent *event) const
     if (c.category() == QChar::Other_PrivateUse)
         return true;
 
+    if (c.isHighSurrogate() && text.length() > 1 && text.at(1).isLowSurrogate())
+        return true;
+
     if (m_type == TextEdit && c == QLatin1Char('\t'))
         return true;
 
